Fix layout on iOS, prevent zoom on iOS 10+, fix input to use tel instead of number for leading zeros

--- a/src/assets/stylesheets/link.scss
+++ b/src/assets/stylesheets/link.scss
@@ -108,6 +108,7 @@ a {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
+  text-align: center;
 }
 
 :local(.keypad-button) {
@@ -170,7 +171,7 @@ a {
   margin: 0;
   font-size: 64pt;
   border: 0;
-  width: 225px;
+  width: 295px;
   letter-spacing: 0.08em;
   text-align: center;
 }
